--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconscout/react-unicons": "^2.0.2",
     "axios": "^1.6.8",
     "firebase": "^10.10.0",
     "localforage": "^1.10.0",
