--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
     "axios": "^1.6.8",
+    "boxicons": "^2.1.4",
     "firebase": "^10.10.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
